samples/_failures_safe/1761241683_9204ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f421072.c: In function ‘main’:
./samples/SAFE/__tmp_6f421072.c:149:9: error: expected declaration or statement at end of input
  149 |         fprintf(stderr, "Empty input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_6f421072.c:149:9: error: expected declaration or statement at end of input
